<resources>
    <string name="app_name">MedLike</string>
    <string name="name">NAME</string>
    <string name="address">ADDRESS</string>
    <string name="like">LIKE</string>
    <string name="rating">033</string>
    <string name="numberOfLike">Количество лайков:</string>
    <string name="numberOfDislike">Количество дизлайков:</string>
    <string name="setLikeOrDislike">Оцените медцентр</string>
    <string name="signOut">Выход</string>
    <string name="changeTheme">Изменить тему</string>


</resources>