<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:padding="5dp">

    <ImageView
        android:id="@+id/image_medcenter"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:scaleType="fitCenter"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/image_medcenter"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/rating"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:background="@color/red"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/image_rating"
        android:layout_toEndOf="@+id/image_medcenter"
        android:paddingTop="10sp"
        android:paddingStart="5dp"
        android:text="@string/name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignStart="@+id/name"
        android:layout_toStartOf="@+id/image_rating"
        android:paddingStart="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:text="@string/address" />

    <ImageView
        android:id="@+id/image_rating"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_baseline_more_vert_24" />

</RelativeLayout>
