<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_logo_detail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:padding="10dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/name_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_logo_detail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/name"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/linearLayoutThumbs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayoutNumberLikesDislikes"
        android:layout_below="@+id/name_detail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:paddingTop="30dp">

        <ImageButton
            android:id="@+id/thumb_up"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_thumb_up_24" />

        <ImageButton
            android:id="@+id/thumb_down"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_thumb_down_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutNumberLikesDislikes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/numberOfLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberOfLike"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/numberOfDislikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numberOfDislike"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>
